--- a/PubSubGUI.csproj
+++ b/PubSubGUI.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publisher.cs" />
     <Compile Include="PublisherControls.cs" />
+    <Compile Include="PublisherGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PublisherGUI.Designer.cs">
+      <DependentUpon>PublisherGUI.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -70,6 +76,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="PublisherGUI.resx">
+      <DependentUpon>PublisherGUI.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
